RESOLVED FIXED286578
[WebGPU] Abandoned or failed command buffers can workaround some validation
https://bugs.webkit.org/show_bug.cgi?id=286578
Summary [WebGPU] Abandoned or failed command buffers can workaround some validation
Mike Wyrzykowski
Reported 2025-01-27 10:19:45 PST
[WebGPU] Abandoned or failed command buffers can workaround some validation
Attachments
Mike Wyrzykowski
Comment 1 2025-01-27 10:20:09 PST
Mike Wyrzykowski
Comment 2 2025-01-27 10:41:47 PST
EWS
Comment 3 2025-01-29 12:56:30 PST
Committed 289519@main (fefb539ed644): <https://commits.webkit.org/289519@main> Reviewed commits have been landed. Closing PR #39597 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.