[WebGPU] Abandoned or failed command buffers can workaround some validation https://bugs.webkit.org/show_bug.cgi?id=286578 rdar://143628699

Reviewed by Cameron McCormack.

We need to check for status == completed prior to assuming the result
in the auxillary buffer contains reliable information.

For instance, a command buffer which was dropped and had a zero ref
count could trigger the completion handler to run without the work
ever being submitted to the MTLCommandQueue.

* Source/WebGPU/WebGPU/RenderPassEncoder.mm:
(WebGPU::RenderPassEncoder::clampIndexBufferToValidValues):
(WebGPU::checkForIndirectDrawDeviceLost):
(WebGPU::RenderPassEncoder::executeBundles):

* LayoutTests/fast/webgpu/nocrash/fuzz-286578-expected.txt
* LayoutTests/fast/webgpu/nocrash/fuzz-286578.html
Add regression test.

Canonical link: https://commits.webkit.org/289519@main